updated questions in quiz

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="assets\style.css" />
+    <link rel="stylesheet" href="assets\js\css\style.css" />
 
   </head>
 
   <body>
 
     <header class="header">
-        <h1 id="highScores" id="scoreTxt"> View high scores</h1>
+        <h1 id="highScores" id="scoreTxt"> 
+            <button id="highScoreBttn">View high scores</button> 
+        </h1>
         <h2> Time left : <span id="timer"> </span></h2>
     </header>
 
@@ -53,6 +55,7 @@
         </section>
 
     </main>
-   <script src="assets\scipt.js"></script>
+   <!-- <script src="scipt copy.js"></script> -->
+   <script src="assets\js\js\scipt.js"></script>
   </body>
 </html>
