added ReadME + savedata JS + fixed folders and links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="assets\js\css\style.css" />
+    <link rel="stylesheet" href="assets\css\style.css" />
 
   </head>
 
@@ -50,12 +50,10 @@
 
         <section class="scoreCard">
             <h3>High scores</h3>
-            <button id="backBtn"> Go back </button>
             <button id="clearScoresBtn"> Clear high scores</button>
         </section>
 
     </main>
-   <!-- <script src="scipt copy.js"></script> -->
-   <script src="assets\js\js\scipt.js"></script>
+   <script src="assets\scipt.js"></script>
   </body>
 </html>
