fixed css + added comments to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-
+<!--Header w/ highScores + Timer -->
     <header class="header">
         <h1 id="highScores" id="scoreTxt"> 
             <button id="highScoreBttn">View high scores</button> 
@@ -20,6 +20,7 @@
 
     <main class="mainContainer" class="correct" class="wrong">
 
+    <!--Start screen display -->
         <section class="startCard">
             <h3>Coding Quiz Challenge</h3>
                 <p>Try to answer the following code-related questions within the time limit.
@@ -27,6 +28,8 @@
                 </p>
                 <button id="startBtn">Start Quiz</button>
         </section>
+
+    <!--Questions display -->
 
         <div class="questionContainer">
             <h3 id="questionTxt">Question</h3>
@@ -40,6 +43,8 @@
             <button id="nextBtn"> Next</button>
             <aside class="resultShow"> </aside>
         </div>
+
+    <!--Submit/Done display -->
     
         <section class="doneCard">
             <h3> All Done!</h3>
@@ -48,6 +53,7 @@
             <button id="submit"> Submit </button>
         </section>
 
+    <!--Scores display -->
         <section class="scoreCard">
             <h3>High scores</h3>
             <button id="clearScoresBtn"> Clear high scores</button>
